# thesis-format-fixer-demo

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude/commands/: thesis-fix.md
backend/app/: __init__.py  cli.py  main.py
backend/app/core/: config.py  exceptions.py
backend/app/docx_engine/: __init__.py  base.py  openxml.py  python_docx.py
backend/app/ir/: __init__.py  models.py
backend/app/llm/: base.py  provider.py
backend/app/repair/: __init__.py  engine.py
backend/app/reports/: generator.py
backend/app/rules/: loader.py  schema.py
backend/app/services/: factory.py  processor.py
backend/app/structure/: __init__.py  llm_recognizer.py  recognizer.py
backend/app/validation/: validator.py
backend/tests/: test_agent_packaging.py  test_anonymized_demo_builder.py  test_api.py  test_cli.py  test_llm_structure_recognizer.py  test_openxml_engine.py  test_processor.py  test_python_docx_engine.py  test_repair_planner.py  test_rules.py  test_runtime_factory.py  test_structure_recognizer.py  test_swufe_rules.py  test_validator.py
docs/superpowers/plans/: 2026-04-14-thesis-format-fixer-demo.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
samples/input/: README.md  demo_thesis.docx
samples/output/: example_format_report.json
samples/realistic_swufe/: README.md  format_delta.json  policy_rules_used.json  swufe_after_anonymized.docx  swufe_before_anonymized.docx
scripts/: __init__.py  build_anonymized_real_demo.py  create_sample_docx.py
(+11 files in other folders)
