[project]
name = "thesis-format-fixer-demo"
version = "0.1.0"
description = "Demo repository for an intelligent university thesis formatting repair system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1.2",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
]

[project.scripts]
thesis-fix = "app.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
